--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,7 +10,7 @@ jobs:
             - name: build toolchain container
               run: |
                 docker build . -t builder
-                docker build -f .github/workflows/Dockerfile.bear -t bear
+                docker build -f .github/workflows/Dockerfile.bear .github/workflows -t bear
             - uses: ammaraskar/gcc-problem-matcher@master
             - name: build Inkay
               run: docker run --rm -v ${PWD}:/app -w /app bear
